[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://assets/music/Korobeiniki-cc0.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/ghost_killed.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/heart_collected.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/player_hit.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/tris_shape_break.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/tris_shape_down.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/tris_shape_hit.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/tris_shape_pushed.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/refused.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/frost_beam.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/line_disappears.ogg" type="AudioStream" id=12]
[ext_resource path="res://scripts/tetris-handler.gd" type="Script" id=13]
[ext_resource path="res://scenes/wall.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/pacman.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/ship.gd" type="Script" id=16]
[ext_resource path="res://assets/bubble.png" type="Texture" id=17]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=18]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=19]
[ext_resource path="res://scenes/HUD/heart.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/pacman.png" type="Texture" id=21]
[ext_resource path="res://assets/ship.png" type="Texture" id=22]
[ext_resource path="res://assets/coinGold.png" type="Texture" id=23]
[ext_resource path="res://assets/boxEmpty.png" type="Texture" id=24]
[ext_resource path="res://assets/ghost.png" type="Texture" id=25]
[ext_resource path="res://assets/clock.png" type="Texture" id=26]
[ext_resource path="res://scenes/menus/pause-menu.tscn" type="PackedScene" id=27]
[ext_resource path="res://scripts/spawner.gd" type="Script" id=28]
[ext_resource path="res://scripts/funky-imp.gd" type="Script" id=29]
[ext_resource path="res://assets/slow-mo.png" type="Texture" id=30]
[ext_resource path="res://assets/game-over-spot.png" type="Texture" id=31]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D


func play_sound(sound):
	sound = get_parent().find_node(sound)
	sound.stream.set_loop(false)
	sound.play()
"

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 4.0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/DejaVuSans-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "fade-in-out"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.7, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="GDScript" id=7]
script/source = "extends Node2D


var waiting_for_players = false
var game_is_over = false


func _input(event):
	if $'/root/world/HUD/game-over-menu'.visible:
		return
	
	if Input.is_action_just_pressed('ui_pause'):
		pause_all()


func pause_all():
	if waiting_for_players:
		return
	
	rpc(\"pause\")
	pause()


func wait_for_players():
	find_node('error-msg').text = 'Waiting for players'
	pause()
	waiting_for_players = true


remote func players_ready():
	waiting_for_players = false
	find_node('error-msg').text = ''
	pause()


remote func pause(game_over=false):
	if waiting_for_players:
		return
	if game_is_over:
		return
	
	var go_to_pause = not get_tree().is_paused()
	visible = go_to_pause
	get_tree().set_pause(go_to_pause)
	
	game_is_over = game_over
"

[node name="world" type="Node2D" groups=[
"world",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
bus = "music"

[node name="sounds" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="ghost_killed" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 3 )
bus = "sounds"

[node name="heart_collected" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 4 )
bus = "sounds"

[node name="player_hit" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 5 )
bus = "sounds"

[node name="tris_shape_break" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 6 )
bus = "sounds"

[node name="tris_shape_down" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 7 )
bus = "sounds"

[node name="tris_shape_hit" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 8 )
bus = "sounds"

[node name="tris_shape_pushed" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 9 )
bus = "sounds"

[node name="refused" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 10 )
volume_db = 2.5
bus = "sounds"

[node name="frost_beam" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 11 )
bus = "sounds"

[node name="line_disappears" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 12 )
bus = "sounds"

[node name="tetris-handler" type="Node2D" parent="."]
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="walls" type="Node2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
__meta__ = {
"_edit_lock_": true
}

[node name="borders" type="Node2D" parent="walls"]

[node name="wall" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 40, 720 )

[node name="wall69" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 0, 720 )

[node name="wall78" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 440, 720 )

[node name="wall3" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 120, 720 )

[node name="wall6" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 200, 720 )

[node name="wall8" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 280, 720 )

[node name="wall2" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 80, 720 )

[node name="wall4" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 160, 720 )

[node name="wall5" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 240, 720 )

[node name="wall7" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 320, 720 )

[node name="wall9" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 360, 720 )

[node name="wall72" parent="walls/borders" groups=[
"wall-bottom",
] instance=ExtResource( 14 )]
position = Vector2( 400, 720 )

[node name="wall10" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 680 )
rotation = -1.5708

[node name="wall46" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 680 )
rotation = 1.5708

[node name="wall21" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 520 )
rotation = -1.5708

[node name="wall38" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 280.5 )
rotation = -1.5708

[node name="wall87" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 40.5 )
rotation = -1.5708

[node name="wall53" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 520 )
rotation = 1.5708

[node name="wall77" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 40 )
rotation = 1.5708

[node name="wall29" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 359.5 )
rotation = -1.5708

[node name="wall30" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 120 )
rotation = -1.5708

[node name="wall58" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 359.5 )
rotation = 1.5708

[node name="wall63" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 200 )
rotation = 1.5708

[node name="wall15" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 680 )
rotation = -1.5708

[node name="wall45" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 680 )
rotation = 1.5708

[node name="wall20" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 520 )
rotation = -1.5708

[node name="wall39" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 280.5 )
rotation = -1.5708

[node name="wall89" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 40.5 )
rotation = -1.5708

[node name="wall49" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 520 )
rotation = 1.5708

[node name="wall76" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 40 )
rotation = 1.5708

[node name="wall28" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 359.5 )
rotation = -1.5708

[node name="wall40" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 120 )
rotation = -1.5708

[node name="wall48" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 359.5 )
rotation = 1.5708

[node name="wall64" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 200 )
rotation = 1.5708

[node name="wall13" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 600 )
rotation = -1.5708

[node name="wall47" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 600 )
rotation = 1.5708

[node name="wall22" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 440 )
rotation = -1.5708

[node name="wall35" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 200.5 )
rotation = -1.5708

[node name="wall54" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 440 )
rotation = 1.5708

[node name="wall59" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 279.5 )
rotation = 1.5708

[node name="wall66" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.13687e-13, 120 )
rotation = 1.5708

[node name="wall16" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 600 )
rotation = -1.5708

[node name="wall37" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 600 )
rotation = 1.5708

[node name="wall18" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 440 )
rotation = -1.5708

[node name="wall34" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 200.5 )
rotation = -1.5708

[node name="wall43" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 440 )
rotation = 1.5708

[node name="wall68" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 279.5 )
rotation = 1.5708

[node name="wall71" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.13687e-13, 120 )
rotation = 1.5708

[node name="wall11" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 640 )
rotation = -1.5708

[node name="wall44" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 640 )
rotation = 1.5708

[node name="wall19" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 480 )
rotation = -1.5708

[node name="wall36" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 240.5 )
rotation = -1.5708

[node name="wall88" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 0.499998 )
rotation = -1.5708

[node name="wall42" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 480 )
rotation = 1.5708

[node name="wall75" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 1.70461e-12 )
rotation = 1.5708

[node name="wall26" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 319.5 )
rotation = -1.5708

[node name="wall31" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 80 )
rotation = -1.5708

[node name="wall67" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 319.5 )
rotation = 1.5708

[node name="wall70" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.58893e-06, 160 )
rotation = 1.5708

[node name="wall14" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 640 )
rotation = -1.5708

[node name="wall51" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 640 )
rotation = 1.5708

[node name="wall24" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 480 )
rotation = -1.5708

[node name="wall82" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 240.5 )
rotation = -1.5708

[node name="wall93" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 0.499998 )
rotation = -1.5708

[node name="wall56" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 480 )
rotation = 1.5708

[node name="wall73" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 1.70461e-12 )
rotation = 1.5708

[node name="wall32" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 319.5 )
rotation = -1.5708

[node name="wall33" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 80 )
rotation = -1.5708

[node name="wall61" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -1, 319.5 )
rotation = 1.5708

[node name="wall65" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.58893e-06, 160 )
rotation = 1.5708

[node name="wall12" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 560 )
rotation = -1.5708

[node name="wall52" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 560 )
rotation = 1.5708

[node name="wall79" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 80 )
rotation = 1.5708

[node name="wall25" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 400 )
rotation = -1.5708

[node name="wall41" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 160.5 )
rotation = -1.5708

[node name="wall57" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 400 )
rotation = 1.5708

[node name="wall62" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 239.5 )
rotation = 1.5708

[node name="wall17" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 560 )
rotation = -1.5708

[node name="wall50" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 560 )
rotation = 1.5708

[node name="wall74" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.14381e-13, 80 )
rotation = 1.5708

[node name="wall23" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 400 )
rotation = -1.5708

[node name="wall27" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 440, 160.5 )
rotation = -1.5708

[node name="wall55" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( 1.3033e-05, 400 )
rotation = 1.5708

[node name="wall60" parent="walls/borders" instance=ExtResource( 14 )]
position = Vector2( -2.22577e-06, 239.5 )
rotation = 1.5708

[node name="maze" type="Polygon2D" parent="walls"]
self_modulate = Color( 1, 1, 1, 0.313726 )
color = Color( 0.4, 0.501961, 1, 1 )
polygon = PoolVector2Array( 20, 100, 20, 700, 420, 700, 420, 100 )

[node name="tris-shapes" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="pacman-walls" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="ghosts" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="pacman" parent="." instance=ExtResource( 15 )]

[node name="ship" type="KinematicBody2D" parent="." groups=[
"ship",
]]
position = Vector2( 220, 600 )
collision_mask = 0
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="bubble" type="Sprite" parent="ship"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 17 )

[node name="character" parent="ship" instance=ExtResource( 18 )]

[node name="sprite" parent="ship/character" index="0"]
position = Vector2( 2, 0 )
scale = Vector2( 0.8, 0.8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ship"]
position = Vector2( 0, 6 )
shape = SubResource( 2 )

[node name="beams" type="Node2D" parent="ship"]
position = Vector2( -18, 18 )

[node name="bullets" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="Node2D" parent="."]
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="Polygon2D" parent="HUD"]
color = Color( 0.160784, 0.160784, 0.160784, 1 )
polygon = PoolVector2Array( 440, -20, 600, -20, 600, 740, 440, 740 )
__meta__ = {
"_edit_lock_": true
}

[node name="level" type="RichTextLabel" parent="HUD"]
margin_left = 470.0
margin_top = 20.0
margin_right = 562.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 18, 2 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level-up" type="Label" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 440.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="HUD/level-up"]
anims/fade-in-out = SubResource( 5 )

[node name="lives" type="Node2D" parent="HUD"]

[node name="heart" parent="HUD/lives" instance=ExtResource( 20 )]
position = Vector2( 512, 59.5 )
scale = Vector2( 0.5, 0.5 )

[node name="heart2" parent="HUD/lives" instance=ExtResource( 20 )]
position = Vector2( 532, 59.5 )
scale = Vector2( 0.5, 0.5 )

[node name="heart3" parent="HUD/lives" instance=ExtResource( 20 )]
position = Vector2( 552, 59.5 )
scale = Vector2( 0.5, 0.5 )

[node name="pacman" type="Sprite" parent="HUD/lives"]
position = Vector2( 483.007, 60.1037 )
scale = Vector2( 0.581867, 0.581867 )
texture = ExtResource( 21 )

[node name="ship2" type="Sprite" parent="HUD/lives"]
position = Vector2( 471.864, 56.0472 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )

[node name="lives-count" type="RichTextLabel" parent="HUD/lives"]
margin_left = 568.0
margin_top = 53.0
margin_right = 608.0
margin_bottom = 73.0
text = "?"

[node name="gold" type="Node2D" parent="HUD"]

[node name="goldcount" type="RichTextLabel" parent="HUD/gold"]
margin_left = 505.0
margin_top = 94.0
margin_right = 585.0
margin_bottom = 114.0
text = "10000"

[node name="coinGold" type="Sprite" parent="HUD/gold"]
position = Vector2( 478, 105 )
texture = ExtResource( 23 )

[node name="coinGold2" type="Sprite" parent="HUD/gold"]
position = Vector2( 484, 105 )
texture = ExtResource( 23 )

[node name="coinGold3" type="Sprite" parent="HUD/gold"]
position = Vector2( 472, 105 )
texture = ExtResource( 23 )

[node name="coinGold4" type="Sprite" parent="HUD/gold"]
position = Vector2( 475, 101 )
texture = ExtResource( 23 )

[node name="coinGold5" type="Sprite" parent="HUD/gold"]
position = Vector2( 482, 101 )
texture = ExtResource( 23 )

[node name="coinGold6" type="Sprite" parent="HUD/gold"]
position = Vector2( 479, 97 )
texture = ExtResource( 23 )

[node name="shapes" type="Node2D" parent="HUD"]

[node name="boxEmpty" type="Sprite" parent="HUD/shapes"]
position = Vector2( 486, 146 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 24 )

[node name="boxEmpty2" type="Sprite" parent="HUD/shapes"]
position = Vector2( 477, 146 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 24 )

[node name="boxEmpty3" type="Sprite" parent="HUD/shapes"]
position = Vector2( 477, 137 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 24 )

[node name="boxEmpty4" type="Sprite" parent="HUD/shapes"]
position = Vector2( 468, 137 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 24 )

[node name="nb_enemies_left" type="RichTextLabel" parent="HUD/shapes"]
margin_left = 504.0
margin_top = 133.0
margin_right = 585.0
margin_bottom = 153.0
text = "0/0"

[node name="ghosts" type="Node2D" parent="HUD"]

[node name="ghost" type="Sprite" parent="HUD/ghosts"]
position = Vector2( 480, 180 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 25 )

[node name="nb_ghosts" type="RichTextLabel" parent="HUD/ghosts"]
margin_left = 504.0
margin_top = 173.0
margin_right = 584.0
margin_bottom = 193.0
text = "0/0"

[node name="slow-mo" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 454.831, 160.936 )
rotation = 4.39823
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/slow-mo"]
autoplay = "rotate"
anims/rotate = SubResource( 6 )

[node name="clock" type="Sprite" parent="HUD"]
position = Vector2( 480, 219 )
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 26 )

[node name="game_time" type="RichTextLabel" parent="HUD"]
margin_left = 504.0
margin_top = 212.0
margin_right = 572.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 18, 2 )
text = "0 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause-menu" parent="HUD" instance=ExtResource( 27 )]
pause_mode = 2
visible = false
position = Vector2( 220, 0 )
script = SubResource( 7 )

[node name="game-over-menu" parent="HUD" instance=ExtResource( 27 )]
pause_mode = 2
visible = false

[node name="margin" parent="HUD/game-over-menu" index="0"]
margin_left = 440.0
margin_right = 600.0

[node name="center-title" parent="HUD/game-over-menu/margin" index="0"]
margin_right = 160.0

[node name="vbox-buttons" parent="HUD/game-over-menu/margin/center-title" index="0"]
margin_left = 13.0
margin_top = 39.0
margin_right = 147.0
margin_bottom = 201.0

[node name="error-msg" parent="HUD/game-over-menu/margin/center-title/vbox-buttons" index="0"]
margin_right = 134.0
custom_colors/font_color = Color( 0.752941, 0.223529, 0.168627, 1 )

[node name="Label" parent="HUD/game-over-menu/margin/center-title/vbox-buttons" index="1"]
margin_left = 0.0
margin_right = 134.0
margin_bottom = 119.0
text = "Game
Over"

[node name="bt-continue" parent="HUD/game-over-menu/margin/center-title/vbox-buttons" index="2"]
visible = false

[node name="bt-back-to-menu" parent="HUD/game-over-menu/margin/center-title/vbox-buttons" index="3"]
margin_left = 14.0
margin_top = 123.0
margin_right = 119.0
margin_bottom = 162.0

[node name="game-over-spot" type="Sprite" parent="HUD"]
visible = false
position = Vector2( -50, 120 )
texture = ExtResource( 31 )

[node name="spawner" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="items" type="Node2D" parent="."]

[node name="funky-imp" type="Node2D" parent="."]
script = ExtResource( 29 )
[connection signal="finished" from="music" to="music" method="_on_music_finished"]

[editable path="ship/character"]

[editable path="HUD/game-over-menu"]
